added logic for author book connection in all operations, added endpoints for getting all entities, adjusted api documentation
